backend/Project/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion PUNTOCOMA
Rule 3     instrucciones -> instruccion PUNTOCOMA
Rule 4     instruccion -> instruccion_imprimir
Rule 5     instruccion -> instruccion_asignacion
Rule 6     instruccion -> instruccion_if
Rule 7     instruccion -> instruccion_while
Rule 8     instruccion -> instruccion_break
Rule 9     instruccion -> instruccion_continue
Rule 10    instruccion -> instruccion_for
Rule 11    instruccion -> instruccion_funcion
Rule 12    instruccion -> instruccion_struct
Rule 13    instruccion -> instruccion_llamada
Rule 14    instruccion -> nativas
Rule 15    instruccion -> instruccion_return
Rule 16    nativas -> RLOG10 P_IZQ expresion P_DER
Rule 17    nativas -> RLOG P_IZQ expresion COMA expresion P_DER
Rule 18    nativas -> RSIN P_IZQ expresion P_DER
Rule 19    nativas -> RCOS P_IZQ expresion P_DER
Rule 20    nativas -> RTAN P_IZQ expresion P_DER
Rule 21    nativas -> RSQRT P_IZQ expresion P_DER
Rule 22    nativas -> RNFLOAT P_IZQ expresion P_DER
Rule 23    nativas -> RNSTRING P_IZQ expresion P_DER
Rule 24    nativas -> RLOWER P_IZQ expresion P_DER
Rule 25    nativas -> RUPPER P_IZQ expresion P_DER
Rule 26    nativas -> RNTYPEOF P_IZQ expresion P_DER
Rule 27    nativas -> RNTRUNC P_IZQ expresion P_DER
Rule 28    nativas -> RNPARSE P_IZQ tipo_dato COMA expresion P_DER
Rule 29    instruccion_imprimir -> RPRINTLN P_IZQ parametros_print P_DER
Rule 30    instruccion_imprimir -> RPRINT P_IZQ parametros_print P_DER
Rule 31    parametros_print -> parametros_print COMA parametro_print
Rule 32    parametros_print -> parametro_print
Rule 33    parametro_print -> expresion
Rule 34    instruccion_for -> RFOR ID RIN rango instrucciones REND
Rule 35    rango -> expresion RANGO expresion
Rule 36    rango -> expresion
Rule 37    instruccion_asignacion -> ID IGUAL expresion
Rule 38    instruccion_asignacion -> ID IGUAL expresion TIPO tipo_dato
Rule 39    instruccion_asignacion -> ID DOT ID IGUAL expresion
Rule 40    tipo_dato -> RINT
Rule 41    tipo_dato -> RFLOAT
Rule 42    tipo_dato -> RSTRING
Rule 43    tipo_dato -> RCHAR
Rule 44    tipo_dato -> RBOOL
Rule 45    instruccion_if -> RIF cuerpo_if
Rule 46    cuerpo_if -> expresion instrucciones REND
Rule 47    cuerpo_if -> expresion instrucciones RELSE instrucciones REND
Rule 48    cuerpo_if -> expresion instrucciones RELSEIF cuerpo_if
Rule 49    instruccion_while -> RWHILE expresion instrucciones REND
Rule 50    instruccion_break -> RBREAK
Rule 51    instruccion_continue -> RCONTINUE
Rule 52    instruccion_funcion -> RFUNC ID P_IZQ parametros P_DER instrucciones REND
Rule 53    instruccion_funcion -> RFUNC ID P_IZQ P_DER instrucciones REND
Rule 54    parametros -> parametros COMA parametro
Rule 55    parametros -> parametro
Rule 56    datos_struct -> datos_struct parametro PUNTOCOMA
Rule 57    datos_struct -> parametro PUNTOCOMA
Rule 58    parametro -> ID TIPO tipo_dato
Rule 59    parametro -> ID
Rule 60    instruccion_struct -> RSTRUCT ID datos_struct REND
Rule 61    instruccion_struct -> RMUTABLE RSTRUCT ID datos_struct REND
Rule 62    expresionStruct -> ID DOT ID
Rule 63    instruccion_llamada -> ID P_IZQ P_DER
Rule 64    instruccion_llamada -> ID P_IZQ parametros_llamada P_DER
Rule 65    parametros_llamada -> parametros_llamada COMA parametro_llamada
Rule 66    parametros_llamada -> parametro_llamada
Rule 67    parametro_llamada -> expresion
Rule 68    instruccion_return -> RRETURN expresion
Rule 69    expresion -> expresion MAS expresion
Rule 70    expresion -> expresion MENOS expresion
Rule 71    expresion -> expresion POR expresion
Rule 72    expresion -> expresion DIVIDIDO expresion
Rule 73    expresion -> expresion MODULO expresion
Rule 74    expresion -> expresion POTENCIA expresion
Rule 75    expresion -> expresion MENOR expresion
Rule 76    expresion -> expresion MENORIGUAL expresion
Rule 77    expresion -> expresion MAYOR expresion
Rule 78    expresion -> expresion MAYORIGUAL expresion
Rule 79    expresion -> expresion COMPARACION expresion
Rule 80    expresion -> expresion DISTINTO expresion
Rule 81    expresion -> expresion AND expresion
Rule 82    expresion -> expresion OR expresion
Rule 83    expresion -> MENOS expresion
Rule 84    expresion -> P_IZQ expresion P_DER
Rule 85    expresion -> RLENGTH P_IZQ expresion P_DER
Rule 86    expresion -> expresionStruct
Rule 87    expresion -> instruccion_llamada
Rule 88    expresion -> nativas
Rule 89    instruccion_asignacion -> ID accesos IGUAL expresion
Rule 90    expresion -> ID accesos
Rule 91    accesos -> accesos acceso
Rule 92    accesos -> acceso
Rule 93    acceso -> C_IZQ expresion C_DER
Rule 94    expresion -> C_IZQ parametros_print C_DER
Rule 95    expresion -> ID
Rule 96    expresion -> ENTERO
Rule 97    expresion -> DECIMAL
Rule 98    expresion -> CADENA
Rule 99    expresion -> CARACTER
Rule 100   expresion -> RTRUE
Rule 101   expresion -> RFALSE
Rule 102   expresion -> NEGACION expresion

Terminals, with rules where they appear

AND                  : 81
CADENA               : 98
CARACTER             : 99
COMA                 : 17 28 31 54 65
COMPARACION          : 79
C_DER                : 93 94
C_IZQ                : 93 94
DECIMAL              : 97
DISTINTO             : 80
DIVIDIDO             : 72
DOT                  : 39 62
ENTERO               : 96
ID                   : 34 37 38 39 39 52 53 58 59 60 61 62 62 63 64 89 90 95
IGUAL                : 37 38 39 89
MAS                  : 69
MAYOR                : 77
MAYORIGUAL           : 78
MENOR                : 75
MENORIGUAL           : 76
MENOS                : 70 83
MODULO               : 73
NEGACION             : 102
OR                   : 82
POR                  : 71
POTENCIA             : 74
PUNTOCOMA            : 2 3 56 57
P_DER                : 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 52 53 63 64 84 85
P_IZQ                : 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 52 53 63 64 84 85
RANGO                : 35
RBOOL                : 44
RBREAK               : 50
RCHAR                : 43
RCONTINUE            : 51
RCOS                 : 19
RELSE                : 47
RELSEIF              : 48
REND                 : 34 46 47 49 52 53 60 61
RFALSE               : 101
RFLOAT               : 41
RFOR                 : 34
RFUNC                : 52 53
RIF                  : 45
RIN                  : 34
RINT                 : 40
RLENGTH              : 85
RLOG                 : 17
RLOG10               : 16
RLOWER               : 24
RMUTABLE             : 61
RNFLOAT              : 22
RNPARSE              : 28
RNSTRING             : 23
RNTRUNC              : 27
RNTYPEOF             : 26
RPRINT               : 30
RPRINTLN             : 29
RRETURN              : 68
RSIN                 : 18
RSQRT                : 21
RSTRING              : 42
RSTRUCT              : 60 61
RTAN                 : 20
RTRUE                : 100
RUPPER               : 25
RWHILE               : 49
TIPO                 : 38 58
error                : 

Nonterminals, with rules where they appear

acceso               : 91 92
accesos              : 89 90 91
cuerpo_if            : 45 48
datos_struct         : 56 60 61
expresion            : 16 17 17 18 19 20 21 22 23 24 25 26 27 28 33 35 35 36 37 38 39 46 47 48 49 67 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 84 85 89 93 102
expresionStruct      : 86
instruccion          : 2 3
instruccion_asignacion : 5
instruccion_break    : 8
instruccion_continue : 9
instruccion_for      : 10
instruccion_funcion  : 11
instruccion_if       : 6
instruccion_imprimir : 4
instruccion_llamada  : 13 87
instruccion_return   : 15
instruccion_struct   : 12
instruccion_while    : 7
instrucciones        : 1 2 34 46 47 47 48 49 52 53
nativas              : 14 88
parametro            : 54 55 56 57
parametro_llamada    : 65 66
parametro_print      : 31 32
parametros           : 52 54
parametros_llamada   : 64 65
parametros_print     : 29 30 31 94
rango                : 34
start                : 0
tipo_dato            : 28 38 58

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion PUNTOCOMA
    (3) instrucciones -> . instruccion PUNTOCOMA
    (4) instruccion -> . instruccion_imprimir
    (5) instruccion -> . instruccion_asignacion
    (6) instruccion -> . instruccion_if
    (7) instruccion -> . instruccion_while
    (8) instruccion -> . instruccion_break
    (9) instruccion -> . instruccion_continue
    (10) instruccion -> . instruccion_for
    (11) instruccion -> . instruccion_funcion
    (12) instruccion -> . instruccion_struct
    (13) instruccion -> . instruccion_llamada
    (14) instruccion -> . nativas
    (15) instruccion -> . instruccion_return
    (29) instruccion_imprimir -> . RPRINTLN P_IZQ parametros_print P_DER
    (30) instruccion_imprimir -> . RPRINT P_IZQ parametros_print P_DER
    (37) instruccion_asignacion -> . ID IGUAL expresion
    (38) instruccion_asignacion -> . ID IGUAL expresion TIPO tipo_dato
    (39) instruccion_asignacion -> . ID DOT ID IGUAL expresion
    (89) instruccion_asignacion -> . ID accesos IGUAL expresion
    (45) instruccion_if -> . RIF cuerpo_if
    (49) instruccion_while -> . RWHILE expresion instrucciones REND
    (50) instruccion_break -> . RBREAK
    (51) instruccion_continue -> . RCONTINUE
    (34) instruccion_for -> . RFOR ID RIN rango instrucciones REND
    (52) instruccion_funcion -> . RFUNC ID P_IZQ parametros P_DER instrucciones REND
    (53) instruccion_funcion -> . RFUNC ID P_IZQ P_DER instrucciones REND
    (60) instruccion_struct -> . RSTRUCT ID datos_struct REND
    (61) instruccion_struct -> . RMUTABLE RSTRUCT ID datos_struct REND
    (63) instruccion_llamada -> . ID P_IZQ P_DER
    (64) instruccion_llamada -> . ID P_IZQ parametros_llamada P_DER
    (16) nativas -> . RLOG10 P_IZQ expresion P_DER
    (17) nativas -> . RLOG P_IZQ expresion COMA expresion P_DER
    (18) nativas -> . RSIN P_IZQ expresion P_DER
    (19) nativas -> . RCOS P_IZQ expresion P_DER
    (20) nativas -> . RTAN P_IZQ expresion P_DER
    (21) nativas -> . RSQRT P_IZQ expresion P_DER
    (22) nativas -> . RNFLOAT P_IZQ expresion P_DER
    (23) nativas -> . RNSTRING P_IZQ expresion P_DER
    (24) nativas -> . RLOWER P_IZQ expresion P_DER
    (25) nativas -> . RUPPER P_IZQ expresion P_DER
    (26) nativas -> . RNTYPEOF P_IZQ expresion P_DER
    (27) nativas -> . RNTRUNC P_IZQ expresion P_DER
    (28) nativas -> . RNPARSE P_IZQ tipo_dato COMA expresion P_DER
    (68) instruccion_return -> . RRETURN expresion

    RPRINTLN        shift and go to state 16
    RPRINT          shift and go to state 17
    ID              shift and go to state 18
    RIF             shift and go to state 19
    RWHILE          shift and go to state 20
    RBREAK          shift and go to state 21
    RCONTINUE       shift and go to state 22
    RFOR            shift and go to state 23
    RFUNC           shift and go to state 24
    RSTRUCT         shift and go to state 25
    RMUTABLE        shift and go to state 26
    RLOG10          shift and go to state 27
    RLOG            shift and go to state 28
    RSIN            shift and go to state 29
    RCOS            shift and go to state 30
    RTAN            shift and go to state 31
    RSQRT           shift and go to state 32
    RNFLOAT         shift and go to state 33
    RNSTRING        shift and go to state 34
    RLOWER          shift and go to state 35
    RUPPER          shift and go to state 36
    RNTYPEOF        shift and go to state 37
    RNTRUNC         shift and go to state 38
    RNPARSE         shift and go to state 39
    RRETURN         shift and go to state 40

    start                          shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    instruccion_imprimir           shift and go to state 4
    instruccion_asignacion         shift and go to state 5
    instruccion_if                 shift and go to state 6
    instruccion_while              shift and go to state 7
    instruccion_break              shift and go to state 8
    instruccion_continue           shift and go to state 9
    instruccion_for                shift and go to state 10
    instruccion_funcion            shift and go to state 11
    instruccion_struct             shift and go to state 12
    instruccion_llamada            shift and go to state 13
    nativas                        shift and go to state 14
    instruccion_return             shift and go to state 15

state 1

    (0) S' -> start .



state 2

    (1) start -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion PUNTOCOMA
    (4) instruccion -> . instruccion_imprimir
    (5) instruccion -> . instruccion_asignacion
    (6) instruccion -> . instruccion_if
    (7) instruccion -> . instruccion_while
    (8) instruccion -> . instruccion_break
    (9) instruccion -> . instruccion_continue
    (10) instruccion -> . instruccion_for
    (11) instruccion -> . instruccion_funcion
    (12) instruccion -> . instruccion_struct
    (13) instruccion -> . instruccion_llamada
    (14) instruccion -> . nativas
    (15) instruccion -> . instruccion_return
    (29) instruccion_imprimir -> . RPRINTLN P_IZQ parametros_print P_DER
    (30) instruccion_imprimir -> . RPRINT P_IZQ parametros_print P_DER
    (37) instruccion_asignacion -> . ID IGUAL expresion
    (38) instruccion_asignacion -> . ID IGUAL expresion TIPO tipo_dato
    (39) instruccion_asignacion -> . ID DOT ID IGUAL expresion
    (89) instruccion_asignacion -> . ID accesos IGUAL expresion
    (45) instruccion_if -> . RIF cuerpo_if
    (49) instruccion_while -> . RWHILE expresion instrucciones REND
    (50) instruccion_break -> . RBREAK
    (51) instruccion_continue -> . RCONTINUE
    (34) instruccion_for -> . RFOR ID RIN rango instrucciones REND
    (52) instruccion_funcion -> . RFUNC ID P_IZQ parametros P_DER instrucciones REND
    (53) instruccion_funcion -> . RFUNC ID P_IZQ P_DER instrucciones REND
    (60) instruccion_struct -> . RSTRUCT ID datos_struct REND
    (61) instruccion_struct -> . RMUTABLE RSTRUCT ID datos_struct REND
    (63) instruccion_llamada -> . ID P_IZQ P_DER
    (64) instruccion_llamada -> . ID P_IZQ parametros_llamada P_DER
    (16) nativas -> . RLOG10 P_IZQ expresion P_DER
    (17) nativas -> . RLOG P_IZQ expresion COMA expresion P_DER
    (18) nativas -> . RSIN P_IZQ expresion P_DER
    (19) nativas -> . RCOS P_IZQ expresion P_DER
    (20) nativas -> . RTAN P_IZQ expresion P_DER
    (21) nativas -> . RSQRT P_IZQ expresion P_DER
    (22) nativas -> . RNFLOAT P_IZQ expresion P_DER
    (23) nativas -> . RNSTRING P_IZQ expresion P_DER
    (24) nativas -> . RLOWER P_IZQ expresion P_DER
    (25) nativas -> . RUPPER P_IZQ expresion P_DER
    (26) nativas -> . RNTYPEOF P_IZQ expresion P_DER
    (27) nativas -> . RNTRUNC P_IZQ expresion P_DER
    (28) nativas -> . RNPARSE P_IZQ tipo_dato COMA expresion P_DER
    (68) instruccion_return -> . RRETURN expresion

    $end            reduce using rule 1 (start -> instrucciones .)
    RPRINTLN        shift and go to state 16
    RPRINT          shift and go to state 17
    ID              shift and go to state 18
    RIF             shift and go to state 19
    RWHILE          shift and go to state 20
    RBREAK          shift and go to state 21
    RCONTINUE       shift and go to state 22
    RFOR            shift and go to state 23
    RFUNC           shift and go to state 24
    RSTRUCT         shift and go to state 25
    RMUTABLE        shift and go to state 26
    RLOG10          shift and go to state 27
    RLOG            shift and go to state 28
    RSIN            shift and go to state 29
    RCOS            shift and go to state 30
    RTAN            shift and go to state 31
    RSQRT           shift and go to state 32
    RNFLOAT         shift and go to state 33
    RNSTRING        shift and go to state 34
    RLOWER          shift and go to state 35
    RUPPER          shift and go to state 36
    RNTYPEOF        shift and go to state 37
    RNTRUNC         shift and go to state 38
    RNPARSE         shift and go to state 39
    RRETURN         shift and go to state 40

    instruccion                    shift and go to state 41
    instruccion_imprimir           shift and go to state 4
    instruccion_asignacion         shift and go to state 5
    instruccion_if                 shift and go to state 6
    instruccion_while              shift and go to state 7
    instruccion_break              shift and go to state 8
    instruccion_continue           shift and go to state 9
    instruccion_for                shift and go to state 10
    instruccion_funcion            shift and go to state 11
    instruccion_struct             shift and go to state 12
    instruccion_llamada            shift and go to state 13
    nativas                        shift and go to state 14
    instruccion_return             shift and go to state 15

state 3

    (3) instrucciones -> instruccion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42


state 4

    (4) instruccion -> instruccion_imprimir .

    PUNTOCOMA       reduce using rule 4 (instruccion -> instruccion_imprimir .)


state 5

    (5) instruccion -> instruccion_asignacion .

    PUNTOCOMA       reduce using rule 5 (instruccion -> instruccion_asignacion .)


state 6

    (6) instruccion -> instruccion_if .

    PUNTOCOMA       reduce using rule 6 (instruccion -> instruccion_if .)


state 7

    (7) instruccion -> instruccion_while .

    PUNTOCOMA       reduce using rule 7 (instruccion -> instruccion_while .)


state 8

    (8) instruccion -> instruccion_break .

    PUNTOCOMA       reduce using rule 8 (instruccion -> instruccion_break .)


state 9

    (9) instruccion -> instruccion_continue .

    PUNTOCOMA       reduce using rule 9 (instruccion -> instruccion_continue .)


state 10

    (10) instruccion -> instruccion_for .

    PUNTOCOMA       reduce using rule 10 (instruccion -> instruccion_for .)


state 11

    (11) instruccion -> instruccion_funcion .

    PUNTOCOMA       reduce using rule 11 (instruccion -> instruccion_funcion .)


state 12

    (12) instruccion -> instruccion_struct .

    PUNTOCOMA       reduce using rule 12 (instruccion -> instruccion_struct .)


state 13

    (13) instruccion -> instruccion_llamada .

    PUNTOCOMA       reduce using rule 13 (instruccion -> instruccion_llamada .)


state 14

    (14) instruccion -> nativas .

    PUNTOCOMA       reduce using rule 14 (instruccion -> nativas .)


state 15

    (15) instruccion -> instruccion_return .

    PUNTOCOMA       reduce using rule 15 (instruccion -> instruccion_return .)


state 16

    (29) instruccion_imprimir -> RPRINTLN . P_IZQ parametros_print P_DER

    P_IZQ           shift and go to state 43


state 17

    (30) instruccion_imprimir -> RPRINT . P_IZQ parametros_print P_DER

    P_IZQ           shift and go to state 44


state 18

    (37) instruccion_asignacion -> ID . IGUAL expresion
    (38) instruccion_asignacion -> ID . IGUAL expresion TIPO tipo_dato
    (39) instruccion_asignacion -> ID . DOT ID IGUAL expresion
    (89) instruccion_asignacion -> ID . accesos IGUAL expresion
    (63) instruccion_llamada -> ID . P_IZQ P_DER
    (64) instruccion_llamada -> ID . P_IZQ parametros_llamada P_DER
    (91) accesos -> . accesos acceso
    (92) accesos -> . acceso
    (93) acceso -> . C_IZQ expresion C_DER

    IGUAL           shift and go to state 45
    DOT             shift and go to state 46
    P_IZQ           shift and go to state 48
    C_IZQ           shift and go to state 50

    accesos                        shift and go to state 47
    acceso                         shift and go to state 49

state 19

    (45) instruccion_if -> RIF . cuerpo_if
    (46) cuerpo_if -> . expresion instrucciones REND
    (47) cuerpo_if -> . expresion instrucciones RELSE instrucciones REND
    (48) cuerpo_if -> . expresion instrucciones RELSEIF cuerpo_if
    (69) expresion -> . expresion MAS expresion
    (70) expresion -> . expresion MENOS expresion
    (71) expresion -> . expresion POR expresion
    (72) expresion -> . expresion DIVIDIDO expresion
    (73) expresion -> . expresion MODULO expresion
    (74) expresion -> . expresion POTENCIA expresion
    (75) expresion -> . expresion MENOR expresion
    (76) expresion -> . expresion MENORIGUAL expresion
    (77) expresion -> . expresion MAYOR expresion
    (78) expresion -> . expresion MAYORIGUAL expresion
    (79) expresion -> . expresion COMPARACION expresion
    (80) expresion -> . expresion DISTINTO expresion
    (81) expresion -> . expresion AND expresion
    (82) expresion -> . expresion OR expresion
    (83) expresion -> . MENOS expresion
    (84) expresion -> . P_IZQ expresion P_DER
    (85) expresion -> . RLENGTH P_IZQ expresion P_DER
    (86) expresion -> . expresionStruct
    (87) expresion -> . instruccion_llamada
    (88) expresion -> . nativas
    (90) expresion -> . ID accesos
    (94) expresion -> . C_IZQ parametros_print C_DER
    (95) expresion -> . ID
    (96) expresion -> . ENTERO
    (97) expresion -> . DECIMAL
    (98) expresion -> . CADENA
    (99) expresion -> . CARACTER
    (100) expresion -> . RTRUE
    (101) expresion -> . RFALSE
    (102) expresion -> . NEGACION expresion
    (62) expresionStruct -> . ID DOT ID
    (63) instruccion_llamada -> . ID P_IZQ P_DER
    (64) instruccion_llamada -> . ID P_IZQ parametros_llamada P_DER
    (16) nativas -> . RLOG10 P_IZQ expresion P_DER
    (17) nativas -> . RLOG P_IZQ expresion COMA expresion P_DER
    (18) nativas -> . RSIN P_IZQ expresion P_DER
    (19) nativas -> . RCOS P_IZQ expresion P_DER
    (20) nativas -> . RTAN P_IZQ expresion P_DER
    (21) nativas -> . RSQRT P_IZQ expresion P_DER
    (22) nativas -> . RNFLOAT P_IZQ expresion P_DER
    (23) nativas -> . RNSTRING P_IZQ expresion P_DER
    (24) nativas -> . RLOWER P_IZQ expresion P_DER
    (25) nativas -> . RUPPER P_IZQ expresion P_DER
    (26) nativas -> . RNTYPEOF P_IZQ expresion P_DER
    (27) nativas -> . RNTRUNC P_IZQ expresion P_DER
    (28) nativas -> . RNPARSE P_IZQ tipo_dato COMA expresion P_DER

    MENOS           shift and go to state 53
    P_IZQ           shift and go to state 54
    RLENGTH         shift and go to state 55
    ID              shift and go to state 59
    C_IZQ           shift and go to state 60
    ENTERO          shift and go to state 61
    DECIMAL         shift and go to state 62
    CADENA          shift and go to state 63
    CARACTER        shift and go to state 64
    RTRUE           shift and go to state 65
    RFALSE          shift and go to state 66
    NEGACION        shift and go to state 67
    RLOG10          shift and go to state 27
    RLOG            shift and go to state 28
    RSIN            shift and go to state 29
    RCOS            shift and go to state 30
    RTAN            shift and go to state 31
    RSQRT           shift and go to state 32
    RNFLOAT         shift and go to state 33
    RNSTRING        shift and go to state 34
    RLOWER          shift and go to state 35
    RUPPER          shift and go to state 36
    RNTYPEOF        shift and go to state 37
    RNTRUNC         shift and go to state 38
    RNPARSE         shift and go to state 39

    cuerpo_if                      shift and go to state 51
    expresion                      shift and go to state 52
    expresionStruct                shift and go to state 56
    instruccion_llamada            shift and go to state 57
    nativas                        shift and go to state 58

state 20

    (49) instruccion_while -> RWHILE . expresion instrucciones REND
    (69) expresion -> . expresion MAS expresion
    (70) expresion -> . expresion MENOS expresion
    (71) expresion -> . expresion POR expresion
    (72) expresion -> . expresion DIVIDIDO expresion
    (73) expresion -> . expresion MODULO expresion
    (74) expresion -> . expresion POTENCIA expresion
    (75) expresion -> . expresion MENOR expresion
    (76) expresion -> . expresion MENORIGUAL expresion
    (77) expresion -> . expresion MAYOR expresion
    (78) expresion -> . expresion MAYORIGUAL expresion
    (79) expresion -> . expresion COMPARACION expresion
    (80) expresion -> . expresion DISTINTO expresion
    (81) expresion -> . expresion AND expresion
    (82) expresion -> . expresion OR expresion
    (83) expresion -> . MENOS expresion
    (84) expresion -> . P_IZQ expresion P_DER
    (85) expresion -> . RLENGTH P_IZQ expresion P_DER
    (86) expresion -> . expresionStruct
    (87) expresion -> . instruccion_llamada
    (88) expresion -> . nativas
    (90) expresion -> . ID accesos
    (94) expresion -> . C_IZQ parametros_print C_DER
    (95) expresion -> . ID
    (96) expresion -> . ENTERO
    (97) expresion -> . DECIMAL
    (98) expresion -> . CADENA
    (99) expresion -> . CARACTER
    (100) expresion -> . RTRUE
    (101) expresion -> . RFALSE
    (102) expresion -> . NEGACION expresion
    (62) expresionStruct -> . ID DOT ID
    (63) instruccion_llamada -> . ID P_IZQ P_DER
    (64) instruccion_llamada -> . ID P_IZQ parametros_llamada P_DER
    (16) nativas -> . RLOG10 P_IZQ expresion P_DER
    (17) nativas -> . RLOG P_IZQ expresion COMA expresion P_DER
    (18) nativas -> . RSIN P_IZQ expresion P_DER
    (19) nativas -> . RCOS P_IZQ expresion P_DER
    (20) nativas -> . RTAN P_IZQ expresion P_DER
    (21) nativas -> . RSQRT P_IZQ expresion P_DER
    (22) nativas -> . RNFLOAT P_IZQ expresion P_DER
    (23) nativas -> . RNSTRING P_IZQ expresion P_DER
    (24) nativas -> . RLOWER P_IZQ expresion P_DER
    (25) nativas -> . RUPPER P_IZQ expresion P_DER
    (26) nativas -> . RNTYPEOF P_IZQ expresion P_DER
    (27) nativas -> . RNTRUNC P_IZQ expresion P_DER
    (28) nativas -> . RNPARSE P_IZQ tipo_dato COMA expresion P_DER

    MENOS           shift and go to state 53
    P_IZQ           shift and go to state 54
    RLENGTH         shift and go to state 55
    ID              shift and go to state 59
    C_IZQ           shift and go to state 60
    ENTERO          shift and go to state 61
    DECIMAL         shift and go to state 62
    CADENA          shift and go to state 63
    CARACTER        shift and go to state 64
    RTRUE           shift and go to state 65
    RFALSE          shift and go to state 66
    NEGACION        shift and go to state 67
    RLOG10          shift and go to state 27
    RLOG            shift and go to state 28
    RSIN            shift and go to state 29
    RCOS            shift and go to state 30
    RTAN            shift and go to state 31
    RSQRT           shift and go to state 32
    RNFLOAT         shift and go to state 33
    RNSTRING        shift and go to state 34
    RLOWER          shift and go to state 35
    RUPPER          shift and go to state 36
    RNTYPEOF        shift and go to state 37
    RNTRUNC         shift and go to state 38
    RNPARSE         shift and go to state 39

    expresion                      shift and go to state 68
    expresionStruct                shift and go to state 56
    instruccion_llamada            shift and go to state 57
    nativas                        shift and go to state 58

state 21

    (50) instruccion_break -> RBREAK .

    PUNTOCOMA       reduce using rule 50 (instruccion_break -> RBREAK .)


state 22

    (51) instruccion_continue -> RCONTINUE .

    PUNTOCOMA       reduce using rule 51 (instruccion_continue -> RCONTINUE .)


state 23

    (34) instruccion_for -> RFOR . ID RIN rango instrucciones REND

    ID              shift and go to state 69


state 24

    (52) instruccion_funcion -> RFUNC . ID P_IZQ parametros P_DER instrucciones REND
    (53) instruccion_funcion -> RFUNC . ID P_IZQ P_DER instrucciones REND

    ID              shift and go to state 70


state 25

    (60) instruccion_struct -> RSTRUCT . ID datos_struct REND

    ID              shift and go to state 71


state 26

    (61) instruccion_struct -> RMUTABLE . RSTRUCT ID datos_struct REND

    RSTRUCT         shift and go to state 72


state 27

    (16) nativas -> RLOG10 . P_IZQ expresion P_DER

    P_IZQ           shift and go to state 73


state 28

    (17) nativas -> RLOG . P_IZQ expresion COMA expresion P_DER

    P_IZQ           shift and go to state 74


state 29

    (18) nativas -> RSIN . P_IZQ expresion P_DER

    P_IZQ           shift and go to state 75


state 30

    (19) nativas -> RCOS . P_IZQ expresion P_DER

    P_IZQ           shift and go to state 76


state 31

    (20) nativas -> RTAN . P_IZQ expresion P_DER

    P_IZQ           shift and go to state 77


state 32

    (21) nativas -> RSQRT . P_IZQ expresion P_DER

    P_IZQ           shift and go to state 78


state 33

    (22) nativas -> RNFLOAT . P_IZQ expresion P_DER

    P_IZQ           shift and go to state 79


state 34

    (23) nativas -> RNSTRING . P_IZQ expresion P_DER

    P_IZQ           shift and go to state 80


state 35

    (24) nativas -> RLOWER . P_IZQ expresion P_DER

    P_IZQ           shift and go to state 81


state 36

    (25) nativas -> RUPPER . P_IZQ expresion P_DER

    P_IZQ           shift and go to state 82


state 37

    (26) nativas -> RNTYPEOF . P_IZQ expresion P_DER

    P_IZQ           shift and go to state 83


state 38

    (27) nativas -> RNTRUNC . P_IZQ expresion P_DER

    P_IZQ           shift and go to state 84


state 39

    (28) nativas -> RNPARSE . P_IZQ tipo_dato COMA expresion P_DER

    P_IZQ           shift and go to state 85


state 40

    (68) instruccion_return -> RRETURN . expresion
    (69) expresion -> . expresion MAS expresion
    (70) expresion -> . expresion MENOS expresion
    (71) expresion -> . expresion POR expresion
    (72) expresion -> . expresion DIVIDIDO expresion
    (73) expresion -> . expresion MODULO expresion
    (74) expresion -> . expresion POTENCIA expresion
    (75) expresion -> . expresion MENOR expresion
    (76) expresion -> . expresion MENORIGUAL expresion
    (77) expresion -> . expresion MAYOR expresion
    (78) expresion -> . expresion MAYORIGUAL expresion
    (79) expresion -> . expresion COMPARACION expresion
    (80) expresion -> . expresion DISTINTO expresion
    (81) expresion -> . expresion AND expresion
    (82) expresion -> . expresion OR expresion
    (83) expresion -> . MENOS expresion
    (84) expresion -> . P_IZQ expresion P_DER
    (85) expresion -> . RLENGTH P_IZQ expresion P_DER
    (86) expresion -> . expresionStruct
    (87) expresion -> . instruccion_llamada
    (88) expresion -> . nativas
    (90) expresion -> . ID accesos
    (94) expresion -> . C_IZQ parametros_print C_DER
    (95) expresion -> . ID
    (96) expresion -> . ENTERO
    (97) expresion -> . DECIMAL
    (98) expresion -> . CADENA
    (99) expresion -> . CARACTER
    (100) expresion -> . RTRUE
    (101) expresion -> . RFALSE
    (102) expresion -> . NEGACION expresion
    (62) expresionStruct -> . ID DOT ID
    (63) instruccion_llamada -> . ID P_IZQ P_DER
    (64) instruccion_llamada -> . ID P_IZQ parametros_llamada P_DER
    (16) nativas -> . RLOG10 P_IZQ expresion P_DER
    (17) nativas -> . RLOG P_IZQ expresion COMA expresion P_DER
    (18) nativas -> . RSIN P_IZQ expresion P_DER
    (19) nativas -> . RCOS P_IZQ expresion P_DER
    (20) nativas -> . RTAN P_IZQ expresion P_DER
    (21) nativas -> . RSQRT P_IZQ expresion P_DER
    (22) nativas -> . RNFLOAT P_IZQ expresion P_DER
    (23) nativas -> . RNSTRING P_IZQ expresion P_DER
    (24) nativas -> . RLOWER P_IZQ expresion P_DER
    (25) nativas -> . RUPPER P_IZQ expresion P_DER
    (26) nativas -> . RNTYPEOF P_IZQ expresion P_DER
    (27) nativas -> . RNTRUNC P_IZQ expresion P_DER
    (28) nativas -> . RNPARSE P_IZQ tipo_dato COMA expresion P_DER
